Fix multiblock ghost rendering and misc changes